<resources>
    <string name="app_name">TFG-Fatiga+PR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="titulo_aplicacion">-Fatiga+PR</string>
    <string name="usuario_defecto">Usuario</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_opciones_usuario">Opciones Usuario</string>
    <string name="menu_graficas">Graficos</string>
    <string name="menu_RMEstimada">RM Estimada</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="titulo_ejercicios">Ejercicios</string>
    <string name="subtitulo_ejercicios_Peso">Peso</string>
    <string name="subtitulo_ejercicios_Repeticiones">Repeticiones</string>
    <string name="subtitulo_ejercicios_RPE">RPE</string>
    <string name="formatodiamesao">%1$s-%2$s-%3$s</string>
    <string name="formatodiames">%1$s-%2$s</string>
    <string name="bt_anadirEjercicio">Añadir ejercicio</string>
    <string name="anadirEjercicio">Pulsa para añadir ejericio</string>
    <string name="anadirAgarre">Pulsa para añadir tipo de agarre</string>
    <string name="anadirRecorrido">Pulsa para modificar el recorrido</string>
    <string name="anadirEquipamiento">Pulsa para añadir equipamiento</string>
    <string name="anadirTipoBarra">Pulsa para modificar el tipo de barra</string>
    <string name="anadirCargaAcumulativa">Pulsa para añadir una carga acumulativa</string>
    <string name="anadirTempo">Pulsa para modificar tempo</string>

    <string name="key_editpref_nombre">Nombre</string>
    <string name="key_editpref_peso">Peso</string>
    <string name="key_editpref_Muerto">Peso Muerto</string>
    <string name="title_activity_actividad_opciones">ActividadOpciones</string>
    <string name="guardar">Guardar</string>
    <string name="pregunta_1">¿Nivel de fatiga de empujes?</string>
    <string name="pregunta_2">¿Nivel de fatiga de tiron?</string>
    <string name="pregunta_3">¿Nivel de fatiga de pierna?</string>
    <string name="nombre_ejercicio_modificaciones">%1$s %2$s</string>
    <string name="rm_estimada">RM Estimada</string>

    <string name="pref_Ejercicio_Banca">Press Banca</string>
    <string name="pref_Ejercicio_Banca2ct">Press Banca 2ct Parada</string>
    <string name="pref_Ejercicio_BancaTG">TG Press Banca</string>

    <string name="pref_Ejercicio_Sentadilla">Sentadilla</string>
    <string name="pref_Ejercicio_Sentadilla2ct">Sentadilla 2ct Parada</string>
    <string name="pref_Ejercicio_SentadillaPin">Sentadilla Pines</string>

    <string name="pref_Ejercicio_PesoMuertoConv">Peso Muerto Convecional</string>
    <string name="pref_Ejercicio_PesoMuertoSumo">Peso Muerto Sumo</string>
    <string name="pref_Ejercicio_PesoMuertoSumo2ct">Peso Muerto Sumo 2ct Parada</string>
    <string name="pref_Ejercicio_PesoMuertoConv2ct">Peso Muerto Sumo 2ct Parada</string>

    <string name="ej_Press_Banca_principal">Ejercicio Press Banca Principal</string>
    <string name="ej_Peso_Muerto_principal">Ejercicio Peso Muerto Principal</string>
    <string name="ej_Sentadilla_principal">Ejercicio Sentadilla Principal</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Iniciar Sesión o Registrarse</string>
    <string name="action_sign_in_short">Iniciar Sesion</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">El usuario no es valido</string>
    <string name="invalid_password">La contraseña debe ser de >5 caracteres</string>
    <string name="login_failed">"Identificación fallida"</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <string name="login_btn">Iniciar Sesión</string>
    <string name="login_prompt">Login to set customizations!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="ayuda_comentarios">Ayuda y comentarios</string>
    <string name="ayuda">Ayuda</string>

</resources>
