<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

    <com.github.mikephil.charting.charts.LineChart
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linechart">

    </com.github.mikephil.charting.charts.LineChart>

</androidx.drawerlayout.widget.DrawerLayout>




