...
                android:textSize="@dimen/titulo_aplicacion"
                android:textStyle="bold"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bt_nuevoEj"
                android:onClick="seleccionarEjercicio"
                android:text="@string/anadirEjercicio"
                android:background="@color/LightSteelBlue"
                />
        <TextView
                android:layout_width="match_parent"
...
                android:id="@+id/bt_agarre"
                android:onClick="seleccionarAgarre"
                android:text="@string/anadirAgarre"
                android:background="@color/LightSteelBlue"/>

        <Button
                android:id="@+id/bt_aEjercicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_anadirEjercicio"
                android:layout_gravity="end"
                android:onClick="anadirEj"/>

...
