<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:entries="@array/seleccion_ejer"
                    android:id="@+id/selctorEj"
                    />
            <com.github.mikephil.charting.charts.LineChart
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/lineChartPR"/>
        </LinearLayout>
</layout>

